# p2p-pbft-modular-blockchain-network

./: .gitignore  .logger.Log(event, stale_peer_pruned, peer, addr.ShortString(8))  Makefile  README.md  go.mod  go.sum  main.go
codec/: hash.go  proto.go  signer.go
core/: blockchain.go  blockchain_test.go  mempool.go  mempool_test.go  processor.go  storer.go  storer_test.go  test_helper.go
core/block/: block.go  block_test.go  body.go  body_test.go  header.go  header_test.go  tail.go  tail_test.go  test_helper.go  transaction.go  transaction_benchmark_test.go  transaction_test.go
core/contract/: contract.go
crypto/: Signature.go  crypto_test.go  privateKey.go  publicKey.go  test_helper.go
discovery-server/: Cargo.toml
discovery-server/src/: dns.rs  handler.rs  main.rs  peer.rs
network/: api.go  broadcaster.go  consensus.go  errors.go  handshake.go  message.go  node.go  node_test.go  peer.go  peer_test.go  proposer.go  proposer_test.go  provider.go  test_helper.go  validator.go  validator_test.go
network/api/: api.go
network/consensus/: consensus.go  factory.go  leader.go  message.go  proposer.go  validator.go
network/message/: handshake.go  handshake_test.go  message.go  message_codec.go  (+7 more)
server/: options.go  server.go  server_test.go  test_helper.go
types/: address.go  address_test.go  atomic_cache.go  atomic_cache_test.go  atomic_list.go  atomic_list_test.go  atomic_map.go  atomic_map_test.go  atomic_number.go  atomic_number_test.go  atomic_set.go  atomic_set_test.go  hash.go  hash_test.go  list.go  list_test.go
util/: log.go  random.go
(+92 files in other folders)
